# amispi-companion

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.githooks/: pre-push
.github/workflows/: check.yml  release.yml
docs/: ARCHITECTURE.md  DAILY_USE_BETA_CHECKLIST.md  DEVELOPMENT_LOG.md  EMOTION_SPRITE_SET.md  FIELD_QA_NOTES.md  IMPLEMENTATION_PLAN.md  INTERACTION_TRACE.md  KNOWN_ISSUES.md  LOCAL_LLM.md  LOCAL_OBSERVATION_ARCHITECTURE.md  MEMORY_AND_DATA_CONTROL.md  NEXT_SESSION.md  PRODUCT_COMPLETION_ROADMAP.md  PRODUCT_VISION.md  PROGRESS_TRACKER.md  RELEASE.md  RESPONSE_QUALITY_GUIDE.md  ROADMAP.md  SAFETY_AND_PRIVACY_BOUNDARIES.md  SETTINGS_BEHAVIOR_MATRIX.md  TECHNICAL_DECISION.md  V1_6_FIELD_QA_AUDIT.md  V1_RELEASE_CANDIDATE_CHECKLIST.md  V1_RELEASE_NOTES_DRAFT.md  V1_STABLE_RELEASE_NOTES.md  V2_ROADMAP_DRAFT.md  VISIBLE_LOCAL_OBSERVER_GOAL.md  VOICE_INTERACTION.md
docs/architecture/: safety-constitution.md
docs/privacy/: what-mumyo-can-see.md
public/characters/default/: README.md
scripts/: build-release.bat  build-release.ps1  bump-version.sh  daily-use-beta-day-note.sh  daily-use-beta-field-status-smoke.sh  daily-use-beta-field-status.sh  daily-use-beta-preflight.sh  privacy-boundary-audit.sh  setup-dev.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/observation/: mod.rs
src-tauri/src/settings/: mod.rs
src/companion/activity/: inferActivity.ts
src/companion/ai/: AIProviderManager.ts  MockProvider.ts  OllamaProvider.ts  OpenAIProvider.ts  RuleProvider.ts  reactionIntent.ts  types.ts
src/companion/audio/: CryEngine.ts  FileCryEngine.ts
src/companion/memory/: buildMemorySummary.ts  dailySummary.ts  memorySummary.ts
src/companion/reactions/: activityDelta.ts  clickPattern.ts  reactionData.ts  reactionHistory.ts  selectReaction.ts  types.ts  useObservationReactions.ts
src/companion/speech/: SpeechPolicy.ts  SpeechQueue.ts
src/components/: Character.tsx  ContextMenu.tsx  DebugOverlay.tsx  SpeechBubble.tsx  TinyWhisper.tsx  UpdateBadge.tsx
src/constants/: companionLayout.ts
src/hooks/: useCompanionState.ts  useDrag.ts  useWander.ts
src/observation/: appClassification.ts  types.ts
src/privacy/: permissions.ts  privacyGate.ts
src/settings/: SettingsApp.tsx  defaults.ts  store.ts  types.ts
src/settings/pages/: AIPage.tsx  BehaviorPage.tsx  DebugPage.tsx  DiagnosticsPage.tsx  MemoryPage.tsx  ObservationPage.tsx  OnboardingPage.tsx  TransparencyPage.tsx  UpdatePage.tsx  VoicePage.tsx
src/styles/: index.css
src/systems/ai/: AIProvider.ts  MockProvider.ts  PromptBuilder.ts  (+2 more)
src/types/: companion.ts
(+20 files in other folders)
