[package]
name = "amispi-companion"
version = "1.0.7"
description = "AmitySpirit Companion — Desktop AI Presence"
authors = []
edition = "2021"

[lib]
name = "amispi_companion_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
ureq = { version = "2", features = ["json"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
  "Win32_Graphics_Gdi",
  "Win32_UI_Shell",
  "Win32_System_Com",
  "Win32_System_SystemInformation",
] }

[dependencies.sysinfo]
version = "0.33"
default-features = false
features = ["system"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
